--- a/StudentAppUsers/src/main/resources/application.properties
+++ b/StudentAppUsers/src/main/resources/application.properties
@@ -3,12 +3,15 @@ spring.application.name=users-ws
 eureka.client.serviceUrl.defaultZone= http://localhost:8010/eureka
 spring.devtools.restart.enabled=true
 
-spring.datasource.url= jdbc:mysql://localhost:3306/testdb?useSSL=false
-spring.datasource.username= root
-spring.datasource.password= harsh1998
+#spring.datasource.url= jdbc:mysql://localhost:3306/testdb?useSSL=false
+#spring.datasource.username= root
+#spring.datasource.password= harsh1998
 
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl-auto= update
+spring.data.mongodb.uri=mongodb+srv://Harsh_1:<pRZvrcqgiSsDANMT>@cluster0.704wp.mongodb.net/student
+spring.data.mongodb.database=student
+
+#spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.hibernate.ddl-auto= update
 
 # App Properties
 bezkoder.app.jwtSecret= bezKoderSecretKey
